--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <p>acompanha um grupo de ladrões habilidosos, liderados pelo misterioso "Professor", que planejam e executam o maior assalto da história da Espanha, primeiro na Casa da Moeda e depois no Banco da Espanha</p>
 <h2>Personagens Principais</h2>
 <ul>
-<li>Pedro Afonso</li>
-
-
-
-
+<li>Rio</li>
+<li>Tóquio</li>
+<li>Berlim</li>
+<li>Nairóbi</li>
+<li>Denver</li>
 </ul>
 
 
